--- a/styles/style.css
+++ b/styles/style.css
@@ -59,6 +59,10 @@ body::before {
   font-weight: 400;
   line-height: 35px;  /* 100% */
   text-transform: none;
+  text-align: left;
+
+  max-width: 742px;
+  letter-spacing:normal;
 }
 
 .page__heading:hover {
