--- a/styles/style.css
+++ b/styles/style.css
@@ -17,14 +17,12 @@ body {
   padding: 0px;
   height: 100%;
   max-width: 1600px;
-  /* надо ли*/
-  max-height: 900px;
-  /* надо ли*/
+   /*надо ли*/
+   max-height: 900px;
+  /*надо ли*/
   position: relative;
   min-width: 800px;
-  display: grid;
-  justify-content: center;
-
+  display: flex;
 }
 
 body::before {
@@ -36,6 +34,34 @@ body::before {
   z-index: 0;
 }
 
+.page__heading {
+  display: flex;
+  align-items: flex-end; 
+  margin-top: 60px;
+   color: #000;
+  margin-left: auto;
+  margin-right: auto;
+
+  font-family: Raleway;
+  font-size: 116px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+  letter-spacing: 4.06px;
+  text-transform: uppercase;
+  width: fit-content;
+  height: fit-content;
+  z-index: 1;
+  max-width: 740px; 
+  text-align: center;
+}
+
+
+
+.page__heading::after {
+  content: "*";
+}
+
 .page__heading:hover::before {
   /* правила для тултипа */
   content: 'На самом деле нет.\AВажнее &mdash; научиться ошибаться.';
@@ -45,13 +71,11 @@ body::before {
   right: 22px;
   left: auto;
   box-shadow: 0px 14px 0px #000;
-
   display: block;
   background-color: #FFF;
   border-radius: 20px;
   border: 2px solid #000;
   padding: 36px 44px;
-
   color: #000;
   font-family: Raleway;
   font-size: 35px;
@@ -60,9 +84,8 @@ body::before {
   line-height: 35px;  /* 100% */
   text-transform: none;
   text-align: left;
-
   max-width: 742px;
-  letter-spacing:normal;
+  letter-spacing: normal;
 }
 
 .page__heading:hover {
@@ -78,31 +101,6 @@ video {
   z-index: -1;
 }
 
-.page__heading {
-  margin-top: 60px;
-  margin-left: auto;
-  margin-right: auto;
-  color: #000;
-  text-align: center;
-  font-family: Raleway;
-  font-size: 116px;
-  font-style: normal;
-  font-weight: 800;
-  line-height: normal;
-  letter-spacing: 4.06px;
-  text-transform: uppercase;
-  width: fit-content;
-  height: fit-content;
-  display: block;
-  z-index: 1;
-  /* max-width: 740px; */
-}
 
-.page__heading::after {
-  content: "*"
-  
-}
 
-.title_word {
-  display: block;
-}
+
