--- a/styles/style.css
+++ b/styles/style.css
@@ -17,12 +17,14 @@ body {
   padding: 0px;
   height: 100%;
   max-width: 1600px;
-   /*надо ли*/
-   max-height: 900px;
-  /*надо ли*/
+  /* надо ли*/
+  max-height: 900px;
+  /* надо ли*/
   position: relative;
   min-width: 800px;
-  display: flex;
+  display: grid;
+  justify-content: center;
+
 }
 
 body::before {
@@ -34,32 +36,13 @@ body::before {
   z-index: 0;
 }
 
-.page__heading {
-  display: flex;
-  align-items: flex-end; 
-  margin-top: 60px;
-   color: #000;
-  margin-left: auto;
-  margin-right: auto;
-
-  font-family: Raleway;
-  font-size: 116px;
-  font-style: normal;
-  font-weight: 800;
-  line-height: normal;
-  letter-spacing: 4.06px;
-  text-transform: uppercase;
-  width: fit-content;
-  height: fit-content;
-  z-index: 1;
-  max-width: 740px; 
-  text-align: center;
-}
-
-
-
-.page__heading::after {
-  content: "*";
+video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  position: absolute;
+  z-index: -1;
 }
 
 .page__heading:hover::before {
@@ -85,22 +68,36 @@ body::before {
   text-transform: none;
   text-align: left;
   max-width: 742px;
-  letter-spacing: normal;
+  letter-spacing:normal;
 }
+
+
+.page__heading {
+  margin-top: 60px;
+  color: #000;
+text-align: center;
+font-family: Raleway;
+font-size: 116px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+letter-spacing: 4.06px;
+text-transform: uppercase;
+  display: inline-block;
+  z-index: 1;
+  max-width: 740px;
+  max-height: 410px;
+}
+
+
+.title_star::after {
+  content: "*";}
+
+.title_word {
+  display: inline-block;
+ }
 
 .page__heading:hover {
   color: #4C4C4C;
 }
-
-video {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
-  position: absolute;
-  z-index: -1;
-}
-
-
-
 
