--- a/styles/style.css
+++ b/styles/style.css
@@ -11,25 +11,22 @@ html {
 }
 
 body {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   height: 100%;
   max-width: 1600px;
-  /* надо ли*/
   max-height: 900px;
-  /* надо ли*/
   position: relative;
   min-width: 800px;
   display: grid;
   justify-content: center;
-
 }
 
 body::before {
   content: '';
   position: absolute;
   inset: 0;
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgb(255, 255, 255, 0.3);
   z-index: 0;
 }
 
@@ -50,7 +47,7 @@ video {
   top: 182px;
   right: 22px;
   left: auto;
-  box-shadow: 0px 14px 0px #000;
+  box-shadow: 0 14px 0 #000;
   display: block;
   background-color: #FFF;
   border-radius: 20px;
@@ -62,7 +59,6 @@ video {
   font-style: normal;
   font-weight: 400;
   line-height: 35px;
-  /* 100% */
   text-transform: none;
   text-align: left;
   max-width: 742px;
@@ -80,7 +76,6 @@ video {
   line-height: normal;
   letter-spacing: 4.06px;
   text-transform: uppercase;
-  display: inline-block;
   z-index: 1;
   max-width: 740px;
   max-height: 410px;
@@ -88,10 +83,6 @@ video {
 
 .title_star::after {
   content: "*";
-}
-
-.title_word {
-  display: inline-block;
 }
 
 .page__heading:hover {
